dev-portfolio/assets/css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
body {
  font-family: "Helvetica Neue", Helvetica;
  src: url("assets/fonts/HelveticaNeue.ttc");
}
:root {
  /* COLORS */
  --white: #fff;
  --gray: #e4e4e4;
  --white-gray: #fafafa;
  --light-gray: #e6e6e6;
  --dark-gray: #707070;
  --teal: #3a7274;
  --light-teal: #4a9d9d;
  --opactity-teal: #8aabac;
  --indigo-blue: #2e81ff;
  --darkish-blue: #075fe4;
  --night-black: #075fe4;
  --night-indigo: #394553;
  --dark-night-black: #1b232c;
  --black: #1c2127;
  --contact-gradient: #394553, #0b0e11;
  --teal-hover: #134646;
}

/* *** ANIMATIONS  ****/
.fade-in {
  -webkit-animation: fade-in 5s both;
}
@-webkit-keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.fade-in-left {
  -webkit-animation: fade-in-left 2s both;
}
@-webkit-keyframes fade-in-left {
  0% {
    opacity: 0;
    -webkit-transform: translateX(-50px);
  }
  100% {
    opacity: 1;
    webkit-transform: translateX(0);
  }
}
.fade-in-right {
  -webkit-animation: fade-in-right 2s both;
}
@-webkit-keyframes fade-in-right {
  0% {
    opacity: 0;
    -webkit-transform: translateX(50px);
  }
  100% {
    opacity: 1;
    webkit-transform: translateX(0);
  }
}
.fade-in-top {
  -webkit-animation: fade-in-top 2s both;
}
@-webkit-keyframes fade-in-top {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-50px);
  }
  100% {
    opacity: 1;
    webkit-transform: translateY(0);
  }
}

.fade-in-bottom {
  -webkit-animation: fade-in-bottom 2s both;
}
@-webkit-keyframes fade-in-bottom {
  0% {
    opacity: 0;
    -webkit-transform: translateY(50px);
  }
  100% {
    opacity: 1;
    webkit-transform: translateY(0);
  }
}

/* CONTAINERS */
.container {
  max-width: 1280px;
  padding: 0 5%;
  margin: 0 auto;
  overflow: hidden;
}
.flex-container {
  display: flex;
}
.grid-container {
  display: grid;
}
/* IMAGES */
img {
  width: 100%;
  height: auto;
  display: block;
}

/* BUTTONS */
.btn {
  border-radius: 4px;
  color: var(--white-gray);
  background: var(--light-teal);
}
.button a {
  color: var(--light-gray);
}
.btn-sm {
  text-align: center;
  font-size: 1.2rem;
  padding: 0.7em 1.2em;
  font-weight: 400;
  letter-spacing: 0.2em;
}
.btn-md {
  font-weight: 400;
  text-align: center;
  font-size: 2.4rem;
  padding: 0.8rem 3.5em;
}
.btn-lg {
  font-weight: 600;
  font-size: 3.2rem;
  padding: 1em 4.5rem;
}

/* LINKS */
a {
  display: inline-block;
  text-decoration: none;
}

/* LIST STYLES */
ul {
  list-style: none;
}

/* HEADER */
header {
  padding: 1.7em 0;
  background: var(--dark-night-black);
  position: fixed;
  z-index: 1;
  width: 100%;
}
header h3 {
  font-size: 1.4rem;
  color: var(--white);
  transition: all 250ms ease-in-out;
}
header h3:hover {
  color: var(--indigo-blue);
  font-size: 2.8rem;
}
header span {
  display: block;
  font-weight: 320;
  font-size: 1.2rem;
}

.navbar {
  padding-top: 2em;
  padding-bottom: 1.5em;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  background: var(--dark-night-black);
  transform: scale(1, 0);
  transform-origin: top;
  transition: transform 500ms ease-in-out;
}
.navbar-wrapper-main {
  display: none;
}
.navbar-wrapper-second {
  display: block;
}
.navbar a {
  opacity: 0;
  transition: opacity 250ms ease-in-out 250ms;
}
.nav-links {
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 2.4rem;
}
.nav-links a {
  color: var(--white-gray);
  padding: 0.4em 0.7em;
  transition: all 250ms ease-in-out;
}
.nav-links a:hover {
  color: var(--indigo-blue);
  font-size: 1.6em;
}

.nav-links li {
  margin-bottom: 0.8em;
}
.social-links {
  font-size: 1.8rem;
  justify-content: center;
  align-items: center;
}
.social-links a {
  color: var(--white-gray);
  transition: all 200ms ease-in-out;
}
.social-links a:hover {
  color: var(--indigo-blue);
  font-size: 2rem;
}
.social-links li {
  margin-right: 1em;
}

.nav-toggle:checked ~ nav {
  display: block;
  transform: scale(1, 1);
}
.nav-toggle {
  display: none;
}
.nav-toggle-label i {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  display: flex;
  align-items: center;
  margin-right: 5%;
  font-size: 2.4rem;
  color: var(--white);
}
.nav-toggle:checked ~ .navbar a {
  opacity: 1;
}

/* HERO BANNER */

.hero-container {
  overflow: hidden;
  padding-top: 6em;
  height: 60vh;
  gap: 5px;
}
.hero-left {
  top: 0;
  flex: 1 1 65%;
  
}
.hero-left img {
  object-fit: cover;
}
.hero-right {
  background: var(--dark-night-black);
  font-size: 2.4rem;
  padding: 0.5em;
  flex: 1 1 35%;
  flex-direction: column;
  justify-content: flex-end;
}

.hero-right h1:first-child {
  color: var(--light-teal);
}
.hero-right h1:nth-child(2) {
  color: var(--indigo-blue);
}
.hero-right h1:nth-child(3) {
  color: var(--darkish-blue);
}

.hero-right span {
  opacity: 0.6;
}
.about {
  background: var(--white-gray);
}

.about-grid {
  row-gap: 1.75em;
}
.about-container {
  padding-top: 3em;
  position: relative;
}
.about-title h1 {
  color: var(--light-gray);
  opacity: 0.3;
  font-size:12rem;
  text-transform: uppercase;
  letter-spacing: 0.3em;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
}
.about-header h2 {
  text-align: center;
  font-size: 2.5rem;
  color: var(--light-teal);
  font-weight: 600;
  letter-spacing: 0.5rem;
}
.about-header h2:nth-child(2) {
  text-transform: uppercase;
}
.about-header h2:first-child {
  font-size: 1.9rem;
  font-weight: normal;
  margin: 0.3em 0;
}
.about-info-flex {
  justify-content: center;
  gap: 2em;
}
.about-info {
  color: var(--light-teal);
  letter-spacing: 0.2rem;
  margin-top: 1.5em;
}

.about-info-left h3 {
  font-size: 1.2rem;
  font-weight: 400;
  text-align: right;
  margin-bottom: 1.2em;
  /* width:fit-content; */
}
.about-info-right {
  text-align: left;
  /* flex:1 1 41%; */
  flex-basis: 59%;
}
.about-info-left {
  /* flex:1 1 39%; */
  flex-basis: 41%;
}
/* ... */

